# pythonIDE

./: _.py  app.py  code_checker.py  main.py  mycode.py  pyproject.toml
static/js/: javascript.js
templates/: index.html
