[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "flask-example"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^2.3"
python = "^3.8"
eventlet = "^0.25.2"
flask-socketio = "^4.3.1"
pylint = "^2.5.3"
[tool.poetry.dev-dependencies]
